# remeta

./: CMakeLists.txt  LICENSE  README.md  index.html
.github/workflows/: docker-image.yml
docker/: remeta.dockerfile  remeta.ubuntu20.dockerfile  remeta.ubuntu22.dockerfile
docs/: mkdocs.yml
docs/docs/: documentation.md  file_formats.md  index.md  install.md  tutorial.md
docs/site/: index.html
docs/site/documentation/: index.html
docs/site/file_formats/: index.html
docs/site/install/: index.html
docs/site/search/: search_index.json
docs/site/tutorial/: index.html
example/: example.annotations  example.cohort1.pheno.bt.tsv  example.cohort1.step2.exome  example.cohort1.step2.pgen  example.cohort1.step2.psam  example.cohort1.step2.pvar  example.cohort2.pheno.bt.tsv  example.cohort2.step1.pgen  example.cohort2.step1.pvar  example.cohort2.step2.pgen  example.cohort2.step2.pvar  example.condition_list  example.genelist  example.genepdef  example.masks  example.setlist
file_formats/: index.html
lib/faddeeva/: LICENSE  Makefile
lib/pgenlib/: pgenlibr.cpp  pgenlibr.h
lib/qfc/: Makefile  qfc.cpp  qfc.h
scripts/: make_binaries.sh
search/: search_index.json
src/: allele_frequency_map.cpp  allele_frequency_map.hpp  annotation_map.cpp  annotation_map.hpp  enums.hpp  htpv4_pos.cpp  htpv4_pos.hpp  lapack_complex.hpp  logging.cpp  logging.hpp  mask_set.hpp  parameter_checks.cpp  parameter_checks.hpp  remeta.cpp  run_acatv.cpp  run_acatv.hpp  run_compute_ref_ld.cpp  run_compute_ref_ld.hpp  run_esma.cpp  run_esma.hpp  run_genep.cpp  run_genep.hpp  run_htp.cpp  run_htp.hpp  run_index_anno.cpp  run_index_anno.hpp  run_ld_deflate.cpp  run_ld_deflate.hpp  run_ld_inflate.cpp  run_ld_inflate.hpp  run_pvma.cpp  run_pvma.hpp  source_map.cpp  source_map.hpp  util.cpp  util.hpp  variant_filter.cpp  variant_filter.hpp
src/io/: allele_freq_writer.cpp  allele_freq_writer.hpp  anno_reader.cpp  anno_reader.hpp  bgz_reader.cpp  bgz_reader.hpp  bgz_writer.cpp  bgz_writer.hpp  block_pgen_reader.cpp  block_pgen_reader.hpp  gene_set_reader.cpp  gene_set_reader.hpp  htpv4_reader.cpp  htpv4_reader.hpp  htpv4_writer.cpp  htpv4_writer.hpp  ref_ld_block_mapper.cpp  ref_ld_block_mapper.hpp  ref_ld_genetic_map.cpp  ref_ld_genetic_map.hpp  ref_ld_matrix_reader.cpp  ref_ld_matrix_reader.hpp  ref_ld_matrix_writer.cpp  ref_ld_matrix_writer.hpp  regenie_anno_reader.cpp  regenie_anno_reader.hpp  regenie_ld_matrix_reader.cpp  regenie_ld_matrix_reader.hpp  regenie_ld_matrix_writer.cpp  regenie_ld_matrix_writer.hpp  remeta_matrix_reader.cpp  remeta_matrix_reader.hpp  tabixed_anno_reader.cpp  tabixed_anno_reader.hpp
src/meta/: es_meta_analyzer.cpp  es_meta_analyzer.hpp  genep_meta_analyzer.cpp  genep_meta_analyzer.hpp  htp_meta_analyzer.cpp  htp_meta_analyzer.hpp  pv_meta_analyzer.cpp  pv_meta_analyzer.hpp  set_meta_analyzer.cpp  set_meta_analyzer.hpp  variant_meta_analyzer.cpp  variant_meta_analyzer.hpp
src/stat/: misc.cpp  misc.hpp  spa.cpp  spa.hpp  tests.cpp  tests.hpp
tutorial/: index.html
